--- a/ChinaVietnamWars/Ch-01.md
+++ b/ChinaVietnamWars/Ch-01.md
@@ -14,13 +14,13 @@ sản điều Hồ từ Moscow đến Quảng Châu để phụ giúp Mikhail
 Borodin, đại diện cho Đệ tam Quốc tế trong chính quyền cách
 mạng Trung Quốc do Quốc Dân Đảng (QDĐ) lãnh đạo. Tại Quảng
 Châu, Hồ cũng đã tham dự vào các hoạt động chống thực
-dân, điều hành một "lớp đào tạo chính trị đặc biệt"
+dân, điều hành một *"lớp đào tạo chính trị đặc biệt"*
 cho thanh niên người Việt. Ông đã mời Lưu Thiếu Kỳ, Chu Ân
 Lai, Lý Phú Xuân và Bành Bái đến nói chuyện trong lớp đào
 tạo của mình`[1]`. Sau này Chu Ân Lai đã kể lại với một nhóm
-khách người Việt rằng: "Năm 1922, tôi đã quen biết Hồ Chủ
+khách người Việt rằng: *"Năm 1922, tôi đã quen biết Hồ Chủ
 tịch. Vào năm 1925, Hồ Chủ tịch đã đến Quảng Châu để hỗ
-trợ cách mạng Trung Quốc. Đây là mối quan hệ máu thịt."`[2]`
+trợ cách mạng Trung Quốc. Đây là mối quan hệ máu thịt."*`[2]`
 
 Hồ đóng vai trò tích cực trong phong trào nổi dậy của nông dân
 và công nhân tại Nam Trung Quốc trong giữa thập niên 1920. Trong
@@ -63,9 +63,9 @@ các đồng sự Cộng sản đóng vai trò lãnh đạo Việt Minh đã
 khôn ngoan kêu gọi tinh thần dân tộc của người Việt, giảm
 nhẹ quyết tâm vì cách mạng xã hội và ủng hộ một cương
 lĩnh chính trị nhấn mạnh tính độc lập dân tộc và những
-cải cách "dân chủ". Tháng Tám 1945, Việt Minh lợi dụng lỗ
+cải cách *"dân chủ"*. Tháng Tám 1945, Việt Minh lợi dụng lỗ
 hổng chính trị khi Nhật đầu hàng để chiếm giữ chính quyền
-tại Hà Nội và thành lập nước Việt Nam Dân chủ Cộng hoà.`[7]`
+tại Hà Nội và thành lập nước Việt Nam Dân chủ Cộng hòa.`[7]`
 
 Trong khi Hồ Chí Minh đang ăn mừng chiến thắng nhất thời,
 Cộng sản Trung Quốc đang chuẩn bị khôi phục cuộc nội
@@ -112,7 +112,7 @@ lực lượng Việt Minh để làm huấn luyện viên quân sự hoặc
 chỉ huy. Đệ nhất Trung đoàn cũng nhận các sĩ quan Việt Minh
 vào doanh trại để huấn luyện. Trong việc vận động người
 Việt gốc Trung Quốc, kế hoạch yêu cầu Đệ nhất Trung đoàn
-và Uỷ ban Hoạt động Biên giới Lâm thời Quảng Tây-Việt Nam
+và Ủy ban Hoạt động Biên giới Lâm thời Quảng Tây-Việt Nam
 của ĐCSTQ gửi cán bộ đến tỉnh Bắc Giang để thành lập
 các đơn vị vũ trang Hoa kiều. Lãnh đạo Việt Minh thông qua
 kế hoạch trên. Đến tháng Bảy 1947, có hơn 830 sĩ quan và binh
@@ -194,7 +194,7 @@ Mười Hai 1949 để thảo luận về vấn đề thiết lập quan
 hệ ngoại giao với VNDCCH. Phiên họp kết luận rằng sẽ lợi
 nhiều hơn hại nếu Trung Quốc thiết lập quan hệ ngoại giao
 với VNDCCH trước khi người Pháp thừa nhận nước CHNDTQ.`[18]`
-Bốn ngày sau, Lưu đại diện cho Uỷ ban Trung ương ĐCSTQ gửi
+Bốn ngày sau, Lưu đại diện cho Ủy ban Trung ương ĐCSTQ gửi
 một bức điện đến Hồ Chí Minh nêu rõ việc Trung Quốc đồng
 ý thành lập quan hệ ngoại giao với chính quyền ông. Liên Sô
 và các quốc gia Đông Âu có thể theo sau, Lưu nói. Để tạo
@@ -213,8 +213,8 @@ tại VNDCCH, 1951-54; Đại sứ Trung Quốc tại VNDCCH, 1954-57
 
 Để dễ bề liên lạc với Cộng sản Việt Nam, vào đầu tháng
 Giêng 1950 Lưu đã chọn La Quí Ba làm người đại diện liên lạc
-của Uỷ ban Trung ương ĐCSTQ với ĐCSVN. La lúc ấy đang là giám
-đốc Văn phòng Quân uỷ Trung ương ĐCSTQ. Lưu chỉ đạo La sang
+của Ủy ban Trung ương ĐCSTQ với ĐCSVN. La lúc ấy đang là giám
+đốc Văn phòng Quân ủy Trung ương ĐCSTQ. Lưu chỉ đạo La sang
 Việt Nam để tiếp xúc với ĐCSĐD, để điều tra điều kiện
 hoạt động bân ấy và để báo cáo những phát hiện của
 mình cho Bắc Kinh hầu giúp lãnh đạo đảng ra quyết định
@@ -227,7 +227,7 @@ giới thiệu La với Lý Bích Sơn và Nguyễn Đức Thủy lúc
 thành viên trong nhóm của La, bao gồm một nhân viên tùy tùng,
 một chuyên viên điện đài, một số thư ký và bảo vệ. Sau
 khi La đi Việt Nam vào ngày 16 tháng Giêng, Lưu đã đánh điện
-cho Uỷ ban Trung ương ĐCSĐD vào ngày hôm sau, thông báo việc
+cho Ủy ban Trung ương ĐCSĐD vào ngày hôm sau, thông báo việc
 bổ nhiệm La làm đại diện ĐCSTQ.`[22]` Trên thực tế La đã
 ở lại Việt Nam lâu hơn nhiều so với dự tính của Lưu. Sau
 này ông đã trở thành người đứng đầu nhóm cố vấn chính
@@ -266,9 +266,9 @@ dựng quan hệ ngoại giao với Pháp.`[26]`
 
 Người Pháp đã giận dữ trước hành động của Moscow và
 Bắc Kinh. Paris đã tố cáo Liên Sô vi phạm luật quốc tế:
-"Việt Nam là một bộ phận của Liên hiệp Pháp, và với
+*"Việt Nam là một bộ phận của Liên hiệp Pháp, và với
 chính quyền Bảo Đại mà Pháp vừa chuyển giao chủ quyền mà
-nước này có được trong khối Liên hiệp Pháp." Cho đến lúc
+nước này có được trong khối Liên hiệp Pháp."* Cho đến lúc
 ấy, Pháp vẫn còn do dự có nên noi gương Anh Quốc thừa nhận
 nước CHNDTQ hay không. Quan điểm ngả theo hướng này giờ đây
 đã bị dẹp bỏ.`[27]`
@@ -276,12 +276,12 @@ nước CHNDTQ hay không. Quan điểm ngả theo hướng này giờ đây
 Nôn nóng thiết lập mối quan hệ cá nhân với giới lãnh đạo
 ĐCSTQ, Hồ đã quyết định đích thân đến thăm Bắc Kinh. Với
 tinh thần kiên định và bền bỉ, vị lãnh tụ Việt Minh mảnh
-khảnh cùng với Trần Đăng Ninh, một uỷ viên Trung ương ĐCSĐD,
+khảnh cùng với Trần Đăng Ninh, một ủy viên Trung ương ĐCSĐD,
 đã đi lội rừng suốt mười bảy ngày trước khi vượt qua
 địa phận Quảng Tây.`[28]` Được tin Hồ đến, ngày 26 tháng
 Giêng Lưu Thiếu Kỳ đã chỉ đạo các cán bộ đảng tại Vũ
-Hán tổ chức một cuộc "đón chào ấm cúng" cho vị khách
-Việt Nam và "cẩn thận đưa ông về Bắc Kinh."`[29]`
+Hán tổ chức một cuộc *"đón chào ấm cúng"* cho vị khách
+Việt Nam và *"cẩn thận đưa ông về Bắc Kinh."*`[29]`
 
 Sau khi Hồ đến Bắc Kinh vào ngày 30 tháng Giêng, Lưu Thiếu
 Kỳ và Chu Đức, phó chủ tịch Chính quyền Nhân dân Trung
@@ -293,12 +293,12 @@ của ông. Sau đó Lưu đã điện cho Mao để báo cáo về cuộc
 gặp mặt.`[30]` Ông nói với Mao rằng đảng đã thành lập một
 hội đồng bao gồm Chu Đức, Nhiếp Vinh Trăn, quyền Tổng Tham
 mưu QĐGPNDTQ, Lý Duy Hán, giám đốc Bộ Mặt trận Thống nhất
-ĐCSTQ và Liệu Thừa Chí, phó chủ tịch Uỷ ban Thường vụ Hoa
+ĐCSTQ và Liệu Thừa Chí, phó chủ tịch Ủy ban Thường vụ Hoa
 kiều thuộc Chính quyền Nhân dân Trung ương để giải quyết
 các vấn đề mà Hồ đưa ra.`[31]` Từ Moscow, Mao và Chu Ân Lai
 gửi điện cho Lưu nhờ ông chuyển lời thăm hỏi đến vị
 lãnh tụ Việt Nam. Họ chúc mừng Hồ về việc VNDCCH tham gia
-"đại gia đình dân chủ phản đế do Liên Sô lãnh đạo" và
+*"đại gia đình dân chủ phản đế do Liên Sô lãnh đạo"* và
 chúc Hồ sớm thành công trong việc thống nhất đất nước.`[32]`
 
 Theo lời Hoàng Văn Hoan, đại sứ VNDCCH đầu tiên tại CHNDTQ,
@@ -309,7 +309,7 @@ khi Trung Quốc hùng mạnh lên, người Pháp sẽ phải công nhận
 nó.`[33]` Phát biểu của Lưu rất quan trọng vì nó nói rõ rằng
 Trung Quốc sẵn sàng trả giá trong việc ủng hộ Việt Minh và
 bỏ qua việc được Pháp công nhận, một bằng chứng biểu lộ
-cam kết của Bắc Kinh với "chủ nghĩa vô sản quốc tế."
+cam kết của Bắc Kinh với *"chủ nghĩa vô sản quốc tế."*
 Nó cũng cho thấy việc người Pháp đã hiểu sai chủ ý của
 Trung Quốc vì một số quan chức tại Pháp đã muốn Bắc Kinh
 từ bỏ trợ giúp cho Hồ để đổi lại việc được công nhận.
@@ -326,8 +326,8 @@ chuyển đến Kremlin đề xuất của họ là Liên Sô nên mời Hồ
 tháng hai Hồ đi Liên Sô. Tại thủ đô Liên Sô, Stalin đã bảo
 Hồ rằng trợ giúp Việt Minh chủ yếu là vấn đề của Trung
 Quốc. Khi tham dự quốc tiệc vinh danh Mao vào ngày 6 tháng Hai,
-Hồ đã nói với Stalin--*"nửa thật nửa đùa"*, theo lời
-Ngũ Tư Quyền--rằng Liên Sô nên ký một hiệp ước với VNDCCH
+Hồ đã nói với Stalin---*"nửa thật nửa đùa,"* theo lời
+Ngũ Tư Quyền---rằng Liên Sô nên ký một hiệp ước với VNDCCH
 với những điều khoản tương tự như đã ký với CHNDTQ. Nhưng
 Stalin đã từ chối. Hồ rời Moscow về Bắc Kinh cùng với Mao
 và Chu vào ngày 17 tháng Hai.`[34]`
@@ -388,7 +388,7 @@ sang Việt Nam để làm cố vấn tại các bộ tư lệnh và sư
 đoàn, và làm sĩ quan chỉ huy ở cấp trung đoàn và tiểu đoàn,
 giới lãnh đạo ĐCSTQ trả lời rằng họ sẽ gửi cố vấn
 nhưng không gửi sĩ quan chỉ huy. Vào ngày 17 tháng Tư, Quân
-uỷ Trung ương ĐCSTQ ra lệnh thành lập Đoàn Cố vấn Quân
+ủy Trung ương ĐCSTQ ra lệnh thành lập Đoàn Cố vấn Quân
 sự Trung Quốc (ĐCVQSTQ) bao gồm các cố vấn có khả năng giúp
 đỡ tại những trung tâm quân sự và tại ba sư đoàn Việt Minh
 và tại một trường đào tạo sĩ quan. Các chuyên gia quân sự
@@ -418,7 +418,7 @@ nên đặt những vấn đề khác xuống hàng thứ yếu."*`[40]`
 Ngày 27 tháng Sáu 1950, Mao, Lưu Thiếu Kỳ và Chu Đức đón tiếp
 các thành viên cao cấp của ĐCVQSTQ tại Bắc Kinh. Để chuẩn
 bị cho họ làm việc tại Việt Nam, lãnh đạo đảng đã yêu
-cầu Hồng Thuỷ (Vũ Nguyên Bác)(tướng Nguyễn Sơn--ND), một
+cầu Hồng Thủy (Vũ Nguyên Bác)(tướng Nguyễn Sơn--ND), một
 tướng người Việt trong QĐGPNDTQ trình bày một khóa ngắn hạn
 về địa lý, khí hậu và các diễn biến quân sự tại Việt
 Nam. Vào cuối tháng Bảy, ĐCVQSTQ được chính thức thành lập
@@ -566,8 +566,8 @@ là một xác định rằng diện mạo vừa có được của CHNDTQ như
 người đi đầu trong những cuộc đấu tranh giải phóng dân tộc
 tại các khu vực thuộc địa và bán thuộc địa. Nó tạo ra một
 kích hoạt ngoại sinh cho quá trình vận động định dạng dân
-tộc và xác nhận với bản thân quốc gia và "những người
-khác" rằng Trung Quốc có thể bảo vệ hình ảnh đẹp đẽ
+tộc và xác nhận với bản thân quốc gia và *"những người
+khác"* rằng Trung Quốc có thể bảo vệ hình ảnh đẹp đẽ
 của mình như là một người ủng hộ phong trào giải phóng dân
 tộc chống lại chủ nghĩa đế quốc và chủ nghĩa thực dân.`[55]`
 
@@ -589,13 +589,13 @@ vào năm 1950 đến cán bộ đảng ở vùng nam Trung Quốc, chỉ
 đạo họ sẵn sàng tiếp xúc với các đảng Cộng sản tại
 Đông nam Á. Trong một bức điện gửi ngày 3 tháng Ba cho Trần
 Canh, chủ tịch Chính quyền Tỉnh Vân Nam và tư lệnh Tỉnh đội
-Vân Nam, và Tống Nhiệm Cùng, Bí thư Tỉnh uỷ Vân Nam và chính
+Vân Nam, và Tống Nhiệm Cùng, Bí thư Tỉnh ủy Vân Nam và chính
 trị viên Tỉnh đội Vân Nam, Lưu Thiếu Kỳ viết rằng với
 việc giải phóng Vân Nam và Quảng Tây, các đảng Cộng sản ở
 vùng Đông nam Á, đặc biệt là Việt Nam và Miến Điện sẽ
 gửi đại diện đến Trung Quốc để tìm cách tiếp xúc với
-ĐCSTQ. *"Uỷ ban Trung ương Đảng Cộng sản Việt Nam đã thiết
-lập quan hệ với chúng ta,"* Lưu tiếp tục. *"các uỷ ban trung
+ĐCSTQ. *"Ủy ban Trung ương Đảng Cộng sản Việt Nam đã thiết
+lập quan hệ với chúng ta,"* Lưu tiếp tục. *"các ủy ban trung
 ương của các đảng Cộng sản khác vẫn chưa thiết lập quan
 hệ chính thức và thường xuyên với chúng ta. Nếu họ gửi
 người sang Vân Nam và Quảng Tây để thành lập các quan hệ
@@ -827,7 +827,7 @@ biệt là về mặt giao thông. Lưu nói rằng đảng sẽ dùng kế
 hoạch này làm nền tảng cho những chương trình trợ giúp khác,
 bao gồm việc gửi hàng tiếp tế, đào tạo cán bộ, tổ chức
 quân đội, tuyển quân, quản lý tiếp vận và tham chiến. Lưu
-nhấn mạnh rằng kế hoạch này phải được Uỷ ban Trung ương
+nhấn mạnh rằng kế hoạch này phải được Ủy ban Trung ương
 đảng Việt Nam thông qua.`[71]`
 
 ![Bắc Việt năm 1950][3]  
@@ -867,7 +867,7 @@ nhuệ Việt Nam đang có tinh thần cao sau khi được huấn luyện
 và trang bị ở Vân Nam và Quảng Tây, nhưng các cán bộ Việt
 Nam trên cấp tiểu đoàn thiếu kinh nghiệm chiến đấu thực
 sự."* Với tình hình này, Trần đề nghị rằng nguyên tắc
-của chiến dịch biên giới nên là *"phá huỷ lực lượng cơ
+của chiến dịch biên giới nên là *"phá hủy lực lượng cơ
 động của địch trên các chiến trường và chiếm đóng một
 số tiền đồn nhỏ lẻ loi nhằm giành chiến thắng ban đầu
 trong khi có thêm kinh nghiệm và nâng cao tinh thần binh
@@ -882,7 +882,7 @@ thể tiêu diệt được ba đến bốn tiểu đoàn cơ động từ
 Lạng Sơn thì sẽ dễ chiếm Cao Bằng và một số đồn gần
 Lạng Sơn."* Nếu điều này xảy ra, Trần tin rằng tình hình
 ở phía bắc và đông bắc Việt Nam *"sẽ thay đổi lớn."*
-Trong bức điện gửi ngày 26 tháng Bảy, Quân uỷ Trung ương
+Trong bức điện gửi ngày 26 tháng Bảy, Quân ủy Trung ương
 ĐCSTQ thông qua kế hoạch tác chiến của Trần.`[75]`
 
 Ngày 28 tháng Bảy, Trần đến trụ sở hành chính của Việt Minh
@@ -913,7 +913,7 @@ trấn gần Cao Bằng vào ngày 12 tháng Tám. ĐCVQSTQ gửi thành viên
 đến các Sư đoàn 304, 308 và 312. Cuối năm ấy, họ cũng gửi
 cố vấn đến Sư đoàn 316 và Sư đoàn Công binh và Pháo binh 316
 (còn gọi là *"Sư đoàn hạng nặng"*). Cùng lúc ấy, Tướng Lý
-Thiên Hựu, phó tư lệnh Quân khu Quảng Tây đứng đầu uỷ ban
+Thiên Hựu, phó tư lệnh Quân khu Quảng Tây đứng đầu ủy ban
 tiếp vận chịu trách nhiệm chuẩn bị và vận chuyển lương
 thực, đạn dược và thuốc men đến Việt Nam. Hai bệnh viện
 dã chiến được dựng lên để cứu chữa lính Việt Nam.`[79]`
@@ -1268,7 +1268,7 @@ luyện các lực lượng chính qui của mình trong nửa đầu năm
 trong khi tiếp tục chiến tranh du kích và tấn công Nghĩa Lộ và
 Sơn La vào nửa cuối của năm. Với Việt Bắc làm căn cứ, La
 tiếp tục, QĐNDVN có thể đưa quân sang Lào vào năm sau. Thông
-qua kế hoạch của La, Quân uỷ Trung ương chỉ thị cho ông
+qua kế hoạch của La, Quân ủy Trung ương chỉ thị cho ông
 bám chặt nguyên tắc *"tiến triển vững chắc và bảo đảm
 chiến thắng trong mọi trận đánh"* trong chiến dịch. Lưu
 Thiếu Kỳ bảo ông rằng *"việc giúp Lào giải phóng là vô
@@ -1282,23 +1282,23 @@ của ông với Bắc Kinh: QĐNDVN sẽ bắt đầu chiến dịch vào
 trung tuần tháng Chín bằng việc tấn công Nghĩa Lộ; sau đó
 sẽ đánh vào Sơn La; chiếm lĩnh hầu hết khu vực Tây Bắc vào
 cuối năm; và tấn công Lai Châu vào năm sau. Năm ngày sau Quân
-uỷ Trung ương ĐCSTQ thông qua đề xuất của La với điều
+ủy Trung ương ĐCSTQ thông qua đề xuất của La với điều
 kiện là QĐNDVN phải điều nghiên chiến trường và chuẩn
 bị tiếp tế kỹ lưỡng trước chiến dịch, đồng thời chú
 ý đến những vấn đề người dân tộc tại Tây Bắc. (Tây
 Bắc là khu vực có đa số người dân tộc cư ngụ.) Ngày 11
 tháng Bảy, La gửi một kế hoạch tác chiến chi tiết của
-chiến dịch đến Quân uỷ Trung ương. Kế hoạch cũng bao gồm
+chiến dịch đến Quân ủy Trung ương. Kế hoạch cũng bao gồm
 một yêu cầu của Việt Nam rằng Trung Quốc đưa quân từ Vân
 Nam vào Việt Nam để hợp tác chiến dịch. Ngày 22 tháng Bảy,
-Quân uỷ Trung ương trả lời rằng một nguyên tắc quan trọng
+Quân ủy Trung ương trả lời rằng một nguyên tắc quan trọng
 của Trung Quốc là không gửi quân vào Việt Nam, nhưng họ có
 thể huy động một số đơn vị dọc theo biên giới như là
 một biểu hiện hỗ trợ. Tiêu diệt quân Pháp trong vùng Tây
 Bắc là trách nhiệm riêng của QĐNDVN. Bắc Kinh cũng đề nghị
 một số thay đổi trong kế hoạch của La.`[111]`
 
-Ngày 31 tháng Bảy, La báo với Quân uỷ Trung ương rằng QĐNDVN
+Ngày 31 tháng Bảy, La báo với Quân ủy Trung ương rằng QĐNDVN
 sẽ bắt đầu quá trình giáo dục cho binh lính về những vấn
 đề người thiểu số vào đầu tháng Chín trước khi họ hành
 quân đến Tây Bắc vào giữa tháng. Ngày 8 tháng Tám, Quân uỷ
@@ -1441,7 +1441,7 @@ giữa giai cấp địa chủ và nông dân. Với chiến dịch này, La
 nhấn mạnh, ĐLĐVN có thể tăng cường chất lượng và hiệu
 quả chiến đấu cho quân đội mình và bảo đảm thành công
 quá trình thực hiện cải cách ruộng đất. Ngày 4 tháng Ba,
-Uỷ ban Trung ương ĐCSTQ đã phê chuẩn đề xuất của La.`[123]`
+Ủy ban Trung ương ĐCSTQ đã phê chuẩn đề xuất của La.`[123]`
 
 ![La Quí Ba và cố vấn][7]  
 *La Quí Ba (thứ năm từ trái sang) và các cố vấn Trung Quốc
@@ -1478,7 +1478,7 @@ ngành công thương nghiệp và tầng lớp có ít đất phát canh cho
 thuê cũng như bảo hộ các cán bộ xuất thân từ tầng lớp
 địa chủ không bị đấu tố. Luật cũng cấm việc bỏ tù,
 đánh đập, tra tấn thân xác và tử hình. Để giám sát việc
-thực thi luật, ĐLĐVN thiết lập Uỷ ban Cải cách Ruộng đất
+thực thi luật, ĐLĐVN thiết lập Ủy ban Cải cách Ruộng đất
 do Trường Chinh đứng đầu.`[125]`
 
 Phong trào cải cách ruộng đất 1953 đã tạo ra một thay đổi
@@ -1490,9 +1490,9 @@ hoặc thậm chí đã vào đảng, đã bị phạt, tịch thu tài sản
 và đôi khi thậm chí bị bỏ tù hoặc xử tử.`[126]` Trong khi
 chính sách cải cách ruộng đã thành công trong việc làm thỏa
 mãn nhu cầu ất đai của giới bần nông và lôi kéo họ ủng
-hộ đảng--như đã thấy trong chiến dịch Điện Biên Phủ,
+hộ đảng---như đã thấy trong chiến dịch Điện Biên Phủ,
 khi hơn 200 nghìn nông dân đã tải hàng tiếp liệu qua đồi
-qua núi giúp QĐNDVN--nó cũng đã tạo ra những hệ quả tiêu
+qua núi giúp QĐNDVN---nó cũng đã tạo ra những hệ quả tiêu
 cực đối với đảng. Việc đấu tranh và đàn áp giai cấp
 quá mức trong thời kỳ cải cách ruộng đất đã đi ngược
 lại với chính sách mặt trận thống nhất của đảng, làm
